tests/failing/not_compile_time_str.rgo
@/str
@/exit
@/printf
bar: (fmt: str!) {
    printf(fmt, exit(0))
}
foo: (fmt: str) {
    bar(fmt)
}
foo("Hi %s\n")
